# kitty_3000

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak
data/: 01_Indoor_images.txt  01_Indoor_points.txt  300W-LP_images_helen.txt  300W-LP_points_helen.txt  good_result_0503_zhangbo.txt  ibugs_images.txt  ibugs_points.txt  test.txt
include/: FaceDetection.h  facemark.h  facemarkLBF.h  facemark_train.h  head_pose_estimator.h  precomp.hpp  utilities.h
src/: FaceDetection.cpp  facemarkLBF.cpp  facemarkLBF.cpp-bak  facemark_train.cpp  head_pose_estimator.cc
test/: test_head_pose.cc  test_model.cc  test_model_cv.cc  test_model_offline.cc  test_offline.cc  train_300W_LP.cc  train_cv.cc  train_ibugs.cc  train_no_meimao.cc  train_offline.cc  train_offline_13.cc  train_offline_32.cc  train_offline_32.cc~
